[package]
name = "rks"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Cluster scheduler and dispatcher for the RK8s container orchestration system."
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/rks"

[dependencies]
common = { workspace = true }
libcni = { workspace = true }
libscheduler = { workspace = true }
libnetwork = { workspace = true }
libvault = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
quinn = { workspace = true }
rustls = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
rcgen = { workspace = true }
etcd-client = { workspace = true }
ipnetwork = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
context = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
native-tls = { workspace = true }
tonic = "=0.14.2"
rand = { workspace = true }
netlink-packet-route = { workspace = true }
rtnetlink = { workspace = true }
nix = { workspace = true, features = ["net"] }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio-util = "0.7.0"
env_logger = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
time = { workspace = true }
hickory-server = { workspace = true, features = ["resolver"] }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
iptables = { workspace = true }
axum = { workspace = true }
humantime = { workspace = true }
base64 = "0.20.0"
reqwest = { workspace = true }
either = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
