[package]
name = "slayerfs"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "High-performance Rust & Layers-aware Distributed Filesystem"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/slayerfs"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "time", "net", "signal"] }
tokio-util = "0.7"
async-trait = "0.1"
async-recursion = "1.0"
aws-config = { version = "1" }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
base64 = "0.21"
md5 = "0.7"
futures = "0.3"
rfuse3 = { version = "0.0.3", features = ["tokio-runtime","unprivileged"]}
futures-util = "0.3.31"
libc = "0.2.175"
bytes = "1"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"
dirs = "6"
sha2 = "0.10"
anyhow = "1.0.100"
env_logger = "0.10"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
etcd-client = "0.17.0"
clap = { version = "4.0", features = ["derive"] }
bitflags = "1.3"
auto_impl = "1.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15"
tempfile = "3"
rand = "0.9.2"
hostname = "0.3"
if-addrs = "0.6"

[dev-dependencies]
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }

[[bench]]
name = "slayerfs_bench"
harness = false
