[package]
name = "slayerfs"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "High-performance Rust & Layers-aware Distributed Filesystem"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/slayerfs"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "time", "net", "signal"] }
async-trait = { workspace = true }
async-recursion = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
base64 = { workspace = true }
md5 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
tokio-util = { workspace = true }
moka = { workspace = true, features = ["future"] }
dashmap = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rfuse3 = { version = "0.0.5", features = ["tokio-runtime","unprivileged"]}
etcd-client = { workspace = true }
clap = { workspace = true, features = ["derive"] }
auto_impl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenv = { workspace = true }
rand = { workspace = true }
hostname = { workspace = true }
bitflags = "1.3.2"
redis = { workspace = true }
if-addrs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }