[workspace]
members = [
    "crates/benchmark",
    "crates/curp",
    "crates/curp-external-api",
    "crates/curp-test-utils",
    "crates/engine",
    "crates/test-macros",
    "crates/utils",
    "crates/xline",
    "crates/xline-client",
    "crates/xline-test-utils",
    "crates/xlineapi",
    "crates/xlinectl",
    "crates/xlineutl",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ignore)'] }

[workspace.dependencies]
anyhow = "1.0.90"
async-stream = "0.3.5"
async-trait = "0.1.81"
axum = "0.7.0"
bincode = "1.3.3"
bytes = "1.7.1"
clap = { version = "4", features = ["derive"] }
clippy-utilities = "0.2.0"
dashmap = "6.1.0"
derive_builder = "0.20.0"
event-listener = "5.3.1"
flume = "0.11.0"
futures = "0.3.30"
itertools = "0.13"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mockall = "0.12.1"
nix = "0.29.0"
opentelemetry = { version = "0.24.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.24.1", features = ["metrics", "rt-tokio", "trace"] }
parking_lot = "0.12.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
priority-queue = "2.0.2"
prost = "0.13.3"
prost-build = "0.13.0"
gm-quic = "0.4"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
tempfile = "3"
thiserror = "1.0.61"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.14"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

[workspace.package]
edition = "2024"