[package]
name = "curp-test-utils"
version = "0.1.0"
edition.workspace = true
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/curp-test-utils"
description = "Test utils for curp"
categories = ["Test"]
keywords = ["Test", "Utils"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
async-trait = "0.1.81"
bincode = "1.3.3"
curp-external-api = { path = "../curp-external-api" }
engine = { path = "../engine" }
itertools = "0.13"
prost = "0.13"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.61"
tokio = { version = "0.2.25", package = "madsim-tokio", features = [
  "rt-multi-thread",
] }
tracing = { version = "0.1.37", features = ["std", "log", "attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
utils = { path = "../utils", version = "0.1.0" }

[lints]
workspace = true