[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition.workspace = true
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/curp"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clippy-utilities = { workspace = true }
curp-external-api = { path = "../curp-external-api" }
curp-test-utils = { path = "../curp-test-utils" }
dashmap = { workspace = true }
derive_builder = { workspace = true }
engine = { path = "../engine" }
event-listener = { workspace = true }
flume = { workspace = true }
fs2 = "0.4.3"
futures = { workspace = true }
indexmap = "2.2.6"
itertools = { workspace = true }

opentelemetry = { workspace = true }
parking_lot = { workspace = true }
priority-queue = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { version = "0.4.13", features = ["filter"] }
tracing = { version = "0.1.37", features = ["std", "log", "attributes"] }
utils = { path = "../utils", version = "0.1.0" }

[dev-dependencies]
anyhow = { workspace = true }
curp-test-utils = { path = "../curp-test-utils" }
itertools = { workspace = true }
mockall = { workspace = true }
once_cell = "1.17.0"
tempfile = { workspace = true }
test-macros = { path = "../test-macros" }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
tracing-test = "0.2.4"

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[features]
client-metrics = []

[lints]
workspace = true