[package]
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline Persistent Layer "
categories = ["Storage Engine"]
keywords = ["storage engine"]
license = "Apache-2.0"
repository = "https://github.com/xline-kv/Xline/tree/master/storage"
readme = "../README.md"
name = "engine"
version = "0.1.0"
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clippy-utilities = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1.40"
utils = { path = "../utils" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
test-macros = { path = "../test-macros" }

[lints]
workspace = true