[package]
name = "utils"
version = "0.1.0"
authors = ["DatenLord Developers <dev@datenlord.io>"]
edition.workspace = true
description = "Utilities functions for Xline"
repository = "https://github.com/xline-kv/Xline/tree/master/utils"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["std", "tokio"]
std = []
tokio = ["dep:async-trait"]

[dependencies]
async-trait = { workspace = true, optional = true }
clippy-utilities = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
event-listener = { workspace = true }
futures = { workspace = true }
getset = "0.1"
interval_map = { version = "0.1", package = "rb-interval-map" }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
pbkdf2 = { workspace = true }
regex = "1.10.5"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
opentelemetry = { workspace = true }
opentelemetry-jaeger-propagator = "0.3.0"
opentelemetry-otlp = { version = "0.17.0", features = [
  "metrics",
  "http-proto",
  "reqwest-client",
] }
test-macros = { path = "../test-macros" }
tracing-subscriber = "0.3.18"

[lints]
workspace = true