[package]
name = "xline"
version = "0.6.1"
edition.workspace = true
authors = ["DatenLord <dev@datenlord.io>"]
description = "Distributed KV storage for metadata"
repository = "https://github.com/xline-kv/Xline"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["KV", "consistency", "metadata"]
categories = ["KV"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clippy-utilities = { workspace = true }
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1.1"
curp = { path = "../curp", version = "0.1.0", features = ["client-metrics"] }
curp-external-api = { path = "../curp-external-api" }
dashmap = { workspace = true }
engine = { path = "../engine" }
event-listener = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hyper = "1.0.0"
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
merged_range = "0.1.0"
nix = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-contrib = { version = "0.16.0", features = [
  "jaeger_json_exporter",
  "rt-tokio",
] }
opentelemetry-otlp = { version = "0.17.0", features = [
  "grpc-tonic",
  "metrics",
  "http-proto",
  "reqwest-client",
] }
opentelemetry-prometheus = { version = "0.17.0" }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
pbkdf2 = { workspace = true }
priority-queue = { workspace = true }
prometheus = "0.13.4"
prost = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.6"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-health = "0.12.0"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utils = { path = "../utils" }
uuid = { version = "1.10.0", features = ["v4"] }
x509-certificate = "0.23.1"
xlineapi = { path = "../xlineapi" }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
etcd-client = { version = "0.14.0", features = ["tls"] }
mockall = { workspace = true }
rand = { workspace = true }
strum = "0.26"
strum_macros = "0.26.4"
tempfile = { workspace = true }
test-macros = { path = "../test-macros" }
xline-client = { path = "../xline-client" }
xline-test-utils = { path = "../xline-test-utils" }

[lints]
workspace = true